# open-deep-research-langgraph

./: .env.example  README.md  langgraph.json  pyproject.toml
notebooks/: test_generate_report_plan.ipynb
src/report_writer/: config.yaml  configuration.py  prompts.py  schemas_tasks.py  tasks.py  utils.py  workflow.py
